--- a/css/main.css
+++ b/css/main.css
@@ -157,3 +157,20 @@ menu {
   letter-spacing: 2px;
   margin: 10px;
 }
+
+.modal {
+   display: none;
+   position: fixed;
+   background: rgba(0, 0, 0, 0.8);
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+}
+
+.closeImg{
+  color: black;
+  position: absolute;
+  left: 80%; 
+  font-size: 80px;
+}
